# nlp-service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_cpu  LICENSE  Makefile  README.md  conda_packages.txt  docker-compose.override-example.yml  docker-compose.yml  docker-compose_cpu.yml  install.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_datahub.sh  run_es8.sh  setup.cfg  setup.py
app/: BaseComponentPatch.py  __init__.py  main.py  views.py
app/api/: router.py
app/commands/: README.md  __init__.py  embed.py  preprocess.py  run_pipeline.py
app/core/: __init__.py  category.py  components.py  config.py  converter.py  elasticsearch.py  event_handlers.py  model.py  pipeline.py  searchlib.py  utils.py
app/data_models/: preprocess.py  qa.py  questiongeneration.py  search.py
app/services/: __init__.py  qa_model.py  question_model.py  questiongeneration_model.py  search_model.py
app/templates/: home.pt
benchmark/: agg-1.json  agg-10.json  agg-2.json  agg-3.json  agg-4.json  agg-5.json  agg-6.json  agg-7.json  agg-8.json  agg-9.json  fulltext.json  locustfile.py  qa.json  similarity.json
conf/: README.md  app.yml  clean-text.yml  converter.yml  embedding.yml  feedback.yml  indexing.yml  langdetect.yml  ner.yml  preprocessor.yml  qa.yml  qasearch.yml  question-classifier.yml  question-generation.yml  search.yml  similarity.yml  spacy.yml  split.yml  summarizer.yml  zeroshot-classifier.yml
notebooks/: ES Embeddings update.ipynb  ES_Highlight_Tuning.ipynb  Generate ES Documents.ipynb  Generate ES FAQs.ipynb  LangDetect_FastText.ipynb  QA-FAQs.ipynb  QA-Transformer vs FARMReader.ipynb  QA-Transformers.ipynb  QA.ipynb  QAFineTuning.ipynb  QAModelEvaluator.ipynb  QuestionAnswersGeneration.ipynb  QuestionGeneration.ipynb  TFHub and Keras embeddings.ipynb  Use BERT.ipynb  milvus-hello.ipynb
pipeline/: pipelines.yml
requirements/: base.txt  constraints.txt  cpu.txt  gpu.txt  haystack-1.11.txt
sample_model/: model_description.md
scripts/: create_embeddings.sh  download_models.py  feedback_squad_direct.json  prepare_index.sh  run.sh  run_datahub.sh  run_datahub_2.sh  run_datahub_3.sh  run_es8.sh
tests/: conftest.py  test_converter.py  test_embedding.py  test_highlight_algorithm.py  test_langdetect.py  test_ner.py  test_qa.py  test_query_classifier.py  test_question_generation.py  test_search.py  test_similarity.py  test_spacy.py  test_summarizer.py  test_zeroshot.py
(+167 files in other folders)
